--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="C:/Users/marco/OneDrive/Documentos/github/img/favicon.png" rel="icon">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/img/favicon.png" rel="icon">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
 
   <!-- Vendor CSS Files -->
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/aos/aos.css" rel="stylesheet">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/aos/aos.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Template Main CSS File -->
-  <link href="C:/Users/marco/OneDrive/Documentos/github/assets/css/style.css" rel="stylesheet">
+  <link href="C:/Users/marco/OneDrive/Documentos/GitHub/gaby2079.github.io/assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
   Pagina de prueba para Local cheto de Martina 
