--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex align-items-center">
     <div class="container position-relative" data-aos="fade-up" data-aos-delay="500">
-      <h1>Bienvenido a tu relax</h1>
+      <h1>Bienvenido a tu nuevo cuerpo</h1>
       <h2>Somos un equipo especializado en Salud Estética</h2>
       <a href="#about" class="btn-get-started scrollto">Comencemos</a>
     </div>
